R Conncetor: test case update and quoting revert

--- a/clients/R/MonetDB.R/NEWS
+++ b/clients/R/MonetDB.R/NEWS
@@ -1,5 +1,6 @@
 0.9.9
-- dbWriteTable now quotes column names
+- dbWriteTable now quotes more reserved words as column names
+- Support for empyt MAPI result sets (Thanks, Roman)
 
 0.9.8
 - Added support for esoteric data types such as MONTH_INTERVAL (Thanks, Roman)
