--- a/clients/R/MonetDB.R/NEWS
+++ b/clients/R/MonetDB.R/NEWS
@@ -1,11 +1,10 @@
-0.9.9
-- dbWriteTable now quotes table/column names if necessary, and outputs warnings if it did
-- New dbApply function to automatically create embedded R functions in MonetDB
-
 0.9.8
 - Added support for esoteric data types such as MONTH_INTERVAL (Thanks, Roman)
 - Cleaned up SQL to R type mapping (we had this twice)
 - Now creating actual R integers if data fits
+- dbWriteTable now quotes table/column names if necessary, and outputs warnings if it did
+- New dbApply function to automatically create embedded R functions in MonetDB
+- Fixes for dplyr backend
 
 0.9.7
 - Fixed crash on Windows (Sorry, everyone)
