Copied R connector version to Jul2015 branch Changesets: 56314:d98bdfc0ff74 56185:503571785830 56183:1631964a8187 56182:d4407c6f864d 56181:a2b9e148eef0 56159:92bf06ce1de6 56157:b58218b5fd9d 56156:51806c911fec 56146:ff8b818a5a3c 56122:e9939515dd04 56120:bf4003213d1a

--- a/clients/R/MonetDB.R/NEWS
+++ b/clients/R/MonetDB.R/NEWS
@@ -1,10 +1,13 @@
-0.9.9
-- dbWriteTable now quotes column names
-
-0.9.8
+1.0.0
 - Added support for esoteric data types such as MONTH_INTERVAL (Thanks, Roman)
 - Cleaned up SQL to R type mapping (we had this twice)
 - Now creating actual R integers if data fits
+- dbWriteTable now quotes table/column names if necessary, and outputs warnings if it did
+- New mdbapply function to automatically create and run embedded R functions in MonetDB
+- Fixes for dplyr backend (Thanks, Anthony)
+- Fix for case when query only returns a prompt (CALL ..., Thanks, Roman)
+- Fix for empty result set on dbGetQuery(), no longer returning NULL (Thanks, Fabian)
+- Fix for dbConnect(), it ignored the url parameter somehow, which broke some sqlsurvey (Thanks, Anthony)
 
 0.9.7
 - Fixed crash on Windows (Sorry, everyone)
