--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,154 @@
+monetdb (11.21.1) unstable; urgency=low
+
+  * Rebuilt.
+  * BZ#3364: Cannot set role back to a user's default role
+  * BZ#3365: Unable to grant object privileges while having a non-default
+    current_role
+  * BZ#3476: Cannot revoke object access
+  * BZ#3556: when 2 multiplexed functions in MAL plan, only one is mapped
+    correctly to bat<mod>.function primitive
+  * BZ#3564: Request: add support for postgresql specific scalar function:
+    split_part(string text, delimiter text, field int)
+  * BZ#3625: SIGSEGV because mat array can overrun in opt_mergetable.c
+  * BZ#3627: SQRT in CASE does not work as of Oct2014
+  * BZ#3654: configure --enable-fits requires extra commands after creating
+    a database instance
+  * BZ#3673: mclient 'expanded' row formatter
+  * BZ#3674: Obfuscate event tracing
+  * BZ#3679: No error is given when incorrect timezone value is specified
+    for a timetz column
+  * BZ#3686: Wrong associativity of multiply/divide
+  * BZ#3702: Filter function not found if created in a user schema
+  * BZ#3708: wrong scoping for cross-schema view references
+  * BZ#3716: alter table my_merge_table drop table t1; crashes mserver5
+    with Segmentation fault
+  * BZ#3724: Wrong size calculation in BATsubjoin
+  * BZ#3732: memory leak (of InstrRecord) in opt_mergetable
+  * BZ#3733: "(TRUE OR <Exp>) AND <Exp>" is evaluated incorrectly
+  * BZ#3735: python connection with unix_socket
+  * BZ#3736: crash if mclient disconnects abruptly during a query
+  * BZ#3738: Database inconsistency when using savepoint
+  * BZ#3739: CASE statements do not handle NULLs in the IN () operator
+    properly
+  * BZ#3740: select epoch(now()); types timestamptz(7,0) and bigint(64,0)
+    are not equal
+  * BZ#3742: Division By Zero
+  * BZ#3744: cast to int gives different results for decimal than double
+  * BZ#3747: joins fail in the presence of nulls
+  * BZ#3748: Missing META-INF/services/java.sql.Driver in JDBC package
+  * BZ#3753: Hang on json field parsing
+  * BZ#3754: select from a REMOTE TABLE referring local table crashes
+    mserver5
+  * BZ#3756: column type conversion sticks to subsequent queries
+  * BZ#3759: select data from "sys"."rejects" returns unexpected error and
+    when next select data from "sys"."sessions" causes an assertion failure
+    in mal_interpreter.c:646.
+  * BZ#3760: SQL parser has problem with (position of) a scalar subquery
+    in a SELECT-list
+  * BZ#3761: SQL executor has problem with (position of) a subquery in a
+    SELECT-list. Inconsistent behavior.
+  * BZ#3764: DROPping multiple users causes a crash
+  * BZ#3765: Re-granting a revoked privilege does not work
+  * BZ#3766: VIEW not visible if created under a different schema
+  * BZ#3767: CREATE TEMP TABLE using "LIKE" incorrectly handled
+  * BZ#3769: SIGSEGV when combining a cast/column alias with a UNION
+    ALL view
+  * BZ#3770: combined conditions on declared table in User Defined Function
+    definition crashes monetdb
+  * BZ#3771: Owner of the schema loses rights if assumes the monetdb role.
+  * BZ#3772: Any user can grant a role.
+  * BZ#3773: quantile(col, 0) and quantile(col, 1) fail
+  * BZ#3774: mclient is unaware of merge tables and remote tables
+  * BZ#3775: COPY INTO: Backslash preceding field separator kills import
+  * BZ#3778: Crash on remote table schema mismatch
+  * BZ#3779: server crashes on MAX() on SELECT DISTINCT something combo
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 07 Aug 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * java: Improved JDBC driver to not throw NullPointerException anymore
+    when calling isNullable() or getPrecision() or getScale() or
+    getColumnDisplaySize() or getSchemaName() or getTableName() or
+    getColumnClassName() on a ResultSet object.
+
+ -- Martin van Dinther <martin.van.dinther@monetdbsolutions.com>  Thu, 6 Aug 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * sql: Added support for 128-bit integers (called HUGEINT) on platforms that
+    support this.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 28 Jul 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * java: We now compile the Java classes using the latest Java 1.8 version, and
+    we tell it to compile for Java 1.7.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 16 Jul 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * buildtools: Upgraded the license to the Mozilla Public License Version 2.0.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * clients: Added a new output format to mclient: --format=expanded (or -fx).
+    In this format, column values are shown in full and below each other.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * sql: Removed support for the mseed library.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * sql: Removed support for RDF.
+  * sql: Removed DataCell.  It was experimental code that was never enabled.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * gdk: BUNtvar and BUNhvar macros no longer work for TYPE_void columns.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * gdk: Changed interfaces of a lot of GDK-level functions.  When they modify a
+    BAT, don't return the same BAT or NULL, but instead return GDK_SUCCEED
+    or GDK_FAIL.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * monetdb5: Implemented batcalc.min and batcalc.max.  Made calc.min and calc.max
+    generic so that no other implementations are needed.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * monetdb5: Removed function batcalc.ifthen.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
+monetdb (11.21.1) unstable; urgency=low
+
+  * gdk: Changed a bunch of hash-related functions to work on the tail column.
+    The functions that have been changed to work on the tail column are:
+    BAThash, BATprepareHash, HASHgonebad, HASHins, and HASHremove.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 3 Jun 2015 14:56:54 +0200
+
 monetdb (11.19.15) unstable; urgency=low
 
   * Rebuilt.
