--- a/clients/mapiclient/mclient.1
+++ b/clients/mapiclient/mclient.1
@@ -17,7 +17,7 @@ mclient \- the MonetDB command-line tool
 MonetDB is a database management system that is developed from a
 main-memory perspective with use of a fully decomposed storage model,
 automatic index management, extensibility of data types and search
-accelerators, SQL- and JAQL- frontends.
+accelerators, and a SQL frontend.
 .PP
 .I Mclient
 is the command-line interface to the MonetDB server.
