--- a/gdk/ChangeLog
+++ b/gdk/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Sat Sep  5 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Implemented BATsubdiff which returns a list of OIDs (sorted, i.e. usable
+  as candidate list) of tuples in the left input whose value does not
+  occur in the right input.  Reimplemented BATkdiff (to be removed later)
+  using this new function.
+
 * Fri Sep  4 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed function BATkintersect.  It wasn't used anymore.  It's
   functionality can be obtained by using BATsubsemijoin.
