--- a/monetdb5/ChangeLog
+++ b/monetdb5/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Fri Sep 11 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algebra.select.  Use algebra.subselect instead.
+
 * Wed Sep  9 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algebra.revert.
 
