--- a/monetdb5/ChangeLog
+++ b/monetdb5/ChangeLog
@@ -5,7 +5,7 @@
 - Removed algebra.tdiff and algebra.tinter.
 
 * Mon Sep 14 2015 Sjoerd Mullender <sjoerd@acm.org>
-- Removed algebra.sample.  Use sampe.subuniform instead.
+- Removed algebra.sample.  Use sample.subuniform instead.
 
 * Fri Sep 11 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algebra.select.  Use algebra.subselect instead.
@@ -21,8 +21,7 @@
   and one with the user name.
 
 * Sun Sep  6 2015 Sjoerd Mullender <sjoerd@acm.org>
-- Implemented algebra.subdiff and algebra.subinter.  The old functions
-  algegra.tdiff and algebra.tinter are now officially deprecated.
+- Implemented algebra.subdiff and algebra.subinter.
 
 * Sat Sep  5 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algebra.tdifference and algebra.tintersect.
