Removed BATsubprojection.  It was not used. Note, this function was incorrectly renamed from BATsubleftfetchjoin in changeset b72574174eb9.

--- a/gdk/ChangeLog
+++ b/gdk/ChangeLog
@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed BATsubleftfetchjoin: it was not used.
 - Removed BATcross1.  Use BATsubcross instead.
 
 * Thu Oct  8 2015 Sjoerd Mullender <sjoerd@acm.org>
