--- a/gdk/ChangeLog
+++ b/gdk/ChangeLog
@@ -2,6 +2,10 @@
 # This file is updated with Maddlog
 
 * Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed "sub" from the names of the function BATsubselect,
+  BATthetasubselect, BATsubcross, BATsubleftjoin, BATsubouterjoin,
+  BATsubthetajoin, BATsubsemijoin, BATsubdiff, BATsubjoin, BATsubbandjoin,
+  BATsubrangejoin, and BATsubunique.
 - Removed BATsubleftfetchjoin: it was not used.
 - Removed BATcross1.  Use BATsubcross instead.
 
