Fixed too eager translation of leftfetchjoin to projection.

--- a/monetdb5/ChangeLog
+++ b/monetdb5/ChangeLog
@@ -32,7 +32,7 @@
 
 * Wed Sep 16 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algebra.leftjoin.  Use algebra.subleftjoin or
-  algebra.projection instead.
+  algebra.leftfetchjoin instead.
 - Removed algebra.tdiff and algebra.tinter.
 
 * Mon Sep 14 2015 Sjoerd Mullender <sjoerd@acm.org>
