--- a/monetdb5/ChangeLog
+++ b/monetdb5/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Mon Dec 21 2015 Martin Kersten <mk@cwi.nl>
+- Converted the *.mal scripts into *.malC versions to prepare for removal
+  of the mserver console.
+
 * Tue Dec 15 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed functions mat.hasMoreElements, mat.info, mat.mergepack,
   mat. newIterator, mat.project, mat.pack2, mat.sortReverse, mat.sort,
